--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,6 +7,9 @@ task:
     fingerprint_script: sha256sum pubspec.yaml
     populate_script: pub get
 
+  resolve_dependecies:
+    get_script: pub get
+
   matrix:
     - name: Test
       container:
